if1/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-dweeqhd/rustlings-dweeqhd/format_check)
error[E0601]: `main` function not found in crate `format_check`
  --> src/main.rs:28:2
   |
28 | }
   |  ^ consider adding a `main` function to `src/main.rs`

error[E0308]: mismatched types
 --> src/main.rs:7:34
  |
7 | pub fn bigger(a: i32, b: i32) -> i32 {
  |        ------                    ^^^ expected `i32`, found `()`
  |        |
  |        implicitly returns `()` as its body has no tail or `return` expression
  |
note: consider returning one of these bindings
 --> src/main.rs:7:15
  |
7 | pub fn bigger(a: i32, b: i32) -> i32 {
  |               ^       ^

Some errors have detailed explanations: E0308, E0601.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `format_check` (bin "format_check") due to 2 previous errors

[!] Source code format check: FAILED
